@@ -1391,7 +1391,7 @@ int CXbmcHttp::xbmcGetGUIStatus()
         output += closeTag+openTag+"Type:Button";
         if (strTmp!="")
           output += closeTag+openTag+"Description:" + strTmp;
-        strTmp = ((CGUIButtonControl *)pControl)->GetExecuteAction();
+        strTmp = ((CGUIButtonControl *)pControl)->GetClickAction();
         if (strTmp!="")
           output += closeTag+openTag+"Execution:" + strTmp;
         long lHyperLinkWindowID = ((CGUIButtonControl *)pControl)->GetHyperLink();
@@ -1407,7 +1407,7 @@ int CXbmcHttp::xbmcGetGUIStatus()
               output += closeTag+openTag+"DescriptionSub:" + (CStdString) ((CGUIButtonControl *)pHyperControl)->GetLabel();
               strTmp.Format("%d", ((CGUIButtonControl *)pHyperControl)->GetID());
               output += closeTag+openTag+"ControlIdSub:" + strTmp;
-              output += closeTag+openTag+"ExecutionSub:" + ((CGUIButtonControl *)pHyperControl)->GetExecuteAction();
+              output += closeTag+openTag+"ExecutionSub:" + ((CGUIButtonControl *)pHyperControl)->GetClickAction();
             }
           }
         }
